Fix spacing between name and phone number

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ main {
   padding-left: 15px;
 }
 
+.collection-item p {
+  margin-top: 5px;
+}
+
 a.editable {
   color: #333;
 }
